--- a/vista/reset.css
+++ b/vista/reset.css
@@ -1,12 +1,12 @@
 /* style.css */
 body {
     font-family: Arial, sans-serif;
-    background-color: #d4f5d0; /* Verde claro suave para el fondo */
-    color: #333; /* Texto en gris oscuro */
+    background-color: #d4f5d0;
+    color: #333;
 }
 
 header {
-    background-color: #8fbf88; /* Verde suave para el encabezado */
+    background-color: #8fbf88; 
     padding: 20px;
 }
 
@@ -23,13 +23,13 @@ nav ul li {
 }
 
 nav ul li a {
-    color: #fff; /* Blanco para el texto de los enlaces */
+    color: #fff; 
     text-decoration: none;
     font-weight: bold;
 }
 
 nav ul li a:hover {
-    color: #333; /* Cambia a gris oscuro al pasar el mouse */
+    color: #333; 
 }
 
 main {
@@ -37,7 +37,7 @@ main {
 }
 
 .form-container {
-    background-color: #e3e6c9; /* Verde claro para el fondo del formulario */
+    background-color: #e3e6c9; 
     padding: 20px;
     border-radius: 8px;
     max-width: 600px;
@@ -45,14 +45,14 @@ main {
 }
 
 h2 {
-    color: #6b8e23; /* Verde oliva para el título */
+    color: #6b8e23; 
     text-align: center;
 }
 
 label {
     display: block;
     margin-bottom: 8px;
-    color: #556b2f; /* Verde más oscuro */
+    color: #556b2f; 
     font-weight: bold;
 }
 
@@ -66,23 +66,23 @@ input[type="text"], input[type="email"], textarea {
 }
 
 input[type="submit"].enviar {
-    width: 40%; /* Ancho del 40% */
-    padding: 15px 0; /* Ajuste del padding */
-    font-size: 18px; /* Tamaño de fuente más grande */
-    font-weight: bold; /* Negrita */
-    color: white; /* Texto blanco */
-    background-color: #8fbf88; /* Verde suave */
+    width: 40%; 
+    padding: 15px 0; 
+    font-size: 18px; 
+    font-weight: bold; 
+    color: white; 
+    background-color: #8fbf88; 
     border: none; 
     border-radius: 5px;
-    transition: background-color 0.3s ease, transform 0.3s ease; /* Transición suave */
+    transition: background-color 0.3s ease, transform 0.3s ease; 
     cursor: pointer;
     display: block;
     margin: 0 auto;
 }
 
 input[type="submit"].enviar:hover {
-    background-color: #6b8e23; /* Verde oliva más oscuro al pasar el mouse */
-    transform: scale(1.1); /* Aumenta ligeramente el tamaño del botón al pasar el mouse */
+    background-color: #6b8e23; 
+    transform: scale(1.1); 
 }
 
 /* footer {
