--- a/vista/style.css
+++ b/vista/style.css
@@ -84,11 +84,7 @@ ul.productos li .producto-precio {
 }
 
 .enviar:hover {
-<<<<<<< Updated upstream
-    background-color: #6b8e23; /
-=======
     background-color: #6b8e23; 
->>>>>>> Stashed changes
     transform: scale(1.1); 
 }
 
@@ -101,11 +97,10 @@ ul.productos li .producto-precio {
 }
 
 footer {
-    background-color: #8fbf88; 
+    background-color: #81b878; 
     color: white;
     text-align: center;
-    padding: 10px 0;
-    position: static;
-    bottom: 0;
+    padding: 10px 0px;
     width: 100%;
+    position: relative;
 }
