--- a/vista/reset.css
+++ b/vista/reset.css
@@ -85,13 +85,18 @@ input[type="submit"].enviar:hover {
     transform: scale(1.1); 
 }
 
+iframe {
+    border: 0; 
+}
+
 footer {
-    background-color: #81b878; 
-    color: white;
-    text-align: center;
-    padding: 10px 0px;
-    width: 100%;
-    position: relative;
+    background-color: #8fbf88; 
+    color: white; 
+    text-align: center; 
+    padding: 10px 0; 
+    position: relative; 
+    width: 100%; 
+    bottom: 0; 
 }
 
 
