--- a/vista/carro.css
+++ b/vista/carro.css
@@ -126,7 +126,7 @@ button:hover {
     background-color: #2980b9;
 }
 
-/* Footer
+Footer
 footer {
     background-color: #8fbf88;
     color: white;
@@ -145,7 +145,7 @@ footer a {
 
 footer a:hover {
     color: #ddd;
-} */
+}
 
 /* Formulario */
 form {
